--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   release:
-    uses: gravitl/devops/.github/workflows/netclientRelease.yml@master
+    uses: LiuChen001/devops/.github/workflows/netclientRelease.yml@master
     with:
       version: ${{ inputs.version }}
     secrets: inherit
